Fix left alignment of social links.

--- a/less/main.less
+++ b/less/main.less
@@ -546,10 +546,10 @@ form {
     li {
       a {
         width: auto;
-        padding: 4px 8px;
+        padding: 4px 8px 4px 0px;
         float: left;
         display: inline-block;
-        margin: 8px 16px;
+        margin: 8px 16px 8px 0px;
         vertical-align: text-top;
         color: @primary;
         .navigationFonts();
